Fix header z-index to be on top of react-slick carousel

--- a/app/assets/stylesheets/components/spot_index.css
+++ b/app/assets/stylesheets/components/spot_index.css
@@ -124,7 +124,7 @@
 .spot-index-nav-bar {
   position: fixed;
   margin-top: 0;
-  z-index: 1;
+  z-index: 7;
   top: 0px;
   width: 100%;
 }
@@ -180,7 +180,7 @@
 
 .white-modal {
   position: fixed;
-  z-index: 1;
+  z-index: 7;
   left: 0;
   top: 0;
   width: 100%;
